--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,10 +1,11 @@
 body {
   width: 100%;
   max-width: 100%;
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.5;
   font-weight: 400;
+  color: #201a19;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
