--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -29,4 +29,17 @@
       background-color: rgba(255,255,255,0);
     }
   }
+  
+  &--white {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 25px;
+    color: #fbfbf8;
+    border-color: #fbfbf8;
+    
+    &:hover,
+    &:active {
+      border-color: @red;
+    }
+  }
 }
