--- a/less/style.less
+++ b/less/style.less
@@ -5,6 +5,9 @@
 @import "scaffolding.less";
 @import "blocks/wrapper";
 @import "blocks/btn";
+@import "blocks/title";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/promo";
+@import "blocks/benefits";
+@import "blocks/about";
