--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -33,6 +33,7 @@
   background-image: url(../img/icons/next.svg);
   background-size: contain;
   background-position: center;
+  outline: none;
 }
 
 .promo__prev {
