--- a/less/style.less
+++ b/less/style.less
@@ -11,3 +11,6 @@
 @import "blocks/promo";
 @import "blocks/benefits";
 @import "blocks/about";
+@import "blocks/order";
+@import "blocks/brands";
+@import "blocks/footer";
