--- a/less/blocks/benefits.less
+++ b/less/blocks/benefits.less
@@ -1,6 +1,6 @@
 .benefits {
   padding-bottom: 100px;
-  padding-top: 100px;
+  padding-top: 95px;
 }
 
 .benefits__wrap {
@@ -21,18 +21,18 @@
 .benefits__list {
   .reset();
   list-style: none;
-  margin-top: 50px;
+  margin-top: 65px;
 }
 
 .benefits__item {
   position: relative;
   padding-left: 50px;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
   
   &::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 2px;
     left: 0;
     width: 25px;
     height: 25px;
@@ -40,9 +40,14 @@
     background-repeat: no-repeat;
     background-size: contain;
   }
+  
+  p {
+    margin-top: 0;
+  }
 }
 
 .benefits__title {
+  margin-bottom: 8px;
   text-transform: uppercase;
   font-size: 24px;
   font-weight: 400;
