--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 15px;
+  padding-top: 17px;
   padding-bottom: 15px;
 }
 
@@ -34,7 +34,8 @@
   text-align: center;
   
   p {
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 10px;
     font-size: 18px;
   }
   
@@ -92,7 +93,7 @@
 }
 
 .header__phone {
-  margin-bottom: 5px;
+  margin-bottom: 7px;
   font-size: 20px;
   
   &::before {
