--- a/less/blocks/order.less
+++ b/less/blocks/order.less
@@ -1,5 +1,5 @@
 .order {
-  padding-top: 100px;
+  padding-top: 95px;
 }
 
 .order__subtitle {
@@ -10,7 +10,7 @@
 }
 
 .order__bg {
-  margin-top: 60px;
+  margin-top: 55px;
   padding-top: 45px;
   padding-bottom: 45px;
   position: relative;
@@ -34,6 +34,7 @@
 }
 
 .order__title {
+  margin-bottom: 10px;
   text-align: center;
   font-size: 20px;
   font-weight: 700;
@@ -41,6 +42,7 @@
 }
 
 .order__text {
+  margin-top: 0;
   text-align: center;
 }
 
@@ -48,12 +50,13 @@
   max-width: 950px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 35px;
 }
 
 .order__wrap {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 }
 
 .order__field {
@@ -65,7 +68,7 @@
 
 .order__label {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-weight: 500;
 }
 
