--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -9,17 +9,38 @@
   align-items: center;
   text-align: center;
   color: #fbfbf8;
+}
+
+.promo__img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+//  transition: ease 6s;
+  transform: scale(1.2);
   
   &::before {
     content: "";
     position: absolute;
-    z-index: -1;
+    z-index: 2;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: rgba(22,20,0,0.3);
   }
+}
+
+.zoom {
+  transform: scale(1);
+  transition: ease 6s;
+}
+
+.promo__wrap {
+  position: relative;
+  z-index: 5;
 }
 
 .promo__prev,
@@ -74,3 +95,36 @@
   font-size: 24px;
   border-radius: 30px;
 }
+
+//----------------------------------------animation
+//@keyframes fadeInUp {
+//  from {
+//    opacity: 0;
+//    transform: translate3d(0, 100%, 0);
+//  }
+//
+//  to {
+//    opacity: 1;
+//    transform: translate3d(0, 0, 0);
+//  }
+//}
+//
+//.fadeInUp {
+//  animation-name: fadeInUp;
+//}
+//
+//@keyframes fadeInDown {
+//  from {
+//    opacity: 0;
+//    transform: translate3d(0, -100%, 0);
+//  }
+//
+//  to {
+//    opacity: 1;
+//    transform: translate3d(0, 0, 0);
+//  }
+//}
+//
+//.fadeInDown {
+//  animation-name: fadeInDown;
+//}
